# higgs-agents

./: AUTHORS  Makefile  README.md
api/: README.md  app.py  app_factory.py  higgs_app.py  pyproject.toml
api/agents/: __init__.py  basic.py
api/configs/: __init__.py  app_config.py
api/configs/deploy/: __init__.py
api/configs/feature/: __init__.py
api/configs/middleware/: __init__.py
api/configs/packaging/: __init__.py
api/controllers/service_api/: __init__.py  demo.py  index.py  playgroud.py
api/dependencies/: services.py
api/docs/: database_example.md
api/extensions/: ext_app_metrics.py  ext_compress.py  ext_database.py  ext_exception.py  ext_fastapi.py  ext_logging.py  ext_migrate.py  ext_router.py  ext_timezone.py  ext_warnings.py
api/migrations/: README  alembic.ini  env.py  script.py.mako
api/migrations/versions/: 81a1b5b06dbd_initial_migration.py  a1b2c3d4e5f6_add_user_table.py
api/models/: __init__.py  base.py  engine.py  hero.py  user.py
api/repositories/: base.py  hero_repository.py  user_repository.py
api/services/: demo_service.py  hero_service.py  user_service.py
