[project]
name = "higgs-agents"
dynamic = ["version"]
requires-python = ">=3.11,<3.13"
readme = "README.md"
authors = [{ name = "Higgs Agents", email = "rainwzp@gmail.com" }]

dependencies = [
    "agno==1.7.0",
    "fastapi~=0.110.0",
    "openai>=1.93.3",
    "psycopg2-binary~=2.9.6",
    "sqlmodel>=0.0.24",
]

# Before adding new dependency, consider place it in
# alphabet order (a-z) and suitable group.

[tool.setuptools]
packages = []

[tool.uv]
default-groups = ["storage", "vdb"]
package = false

[dependency-groups]

############################################################
# [ Dev ] dependency group
# Required for development and running tests
############################################################
dev = [
    "coverage~=7.2.4",
    "dotenv-linter~=0.5.0",
    "faker~=32.1.0",
    "lxml-stubs~=0.5.1",
    "mypy~=1.16.0",
    "ruff~=0.11.5",
    "pytest~=8.3.2",
    "pytest-benchmark~=4.0.0",
    "pytest-cov~=4.1.0",
    "pytest-env~=1.1.3",
    "pytest-mock~=3.14.0",
    "fastapi-cli>=0.0.8",
    "alembic>=1.16.4",
]

############################################################
# [ Storage ] dependency group
# Required for storage clients
############################################################
storage = []


############################################################
# [ VDB ] dependency group
# Required by vector store clients
############################################################
vdb = ["pgvector==0.2.5", "pymilvus~=2.5.0"]
